--- a/index.html
+++ b/index.html
@@ -1035,7 +1035,7 @@
 			clustrmaps 🌎</a>.
 		<div id="notice" style="display:none; color:#dedede; font-size:.5em;">
 			<p>
-				<a href="https://clustrmaps.com/site/1c160"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=WDzlybvnegD0Xxe9QGbNmv3cH91i7qNX_2fjxik-GUU&cl=ffffff" /></a>
+				<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=WDzlybvnegD0Xxe9QGbNmv3cH91i7qNX_2fjxik-GUU&cl=ffffff&w=a"></script>
 			</p>
 		</div>
 	</center>
